--- a/frontend/src/container/Gallery/Gallery.css
+++ b/frontend/src/container/Gallery/Gallery.css
@@ -31,38 +31,42 @@
   display: flex;
   flex-direction: row;
   width: max-content;
-  overflow-x: scroll;
+  overflow-x: auto;
+  scroll-behavior: smooth;
   -ms-overflow-style: none;
   scrollbar-width: none;
 }
 
 .app__gallery-images_container::-webkit-scrollbar {
   display: none;
-} /*to hide the scroller of scrollbar*/
+}
 
 .app__gallery-images_card {
   position: relative;
   min-width: 301px;
   height: 447px;
   margin-right: 2rem;
+  overflow: hidden;
 }
 
-.gallery__image-icon {
-  position: absolute;
-  color: #fff;
-  font-size: 2rem;
-  opacity: 0.5;
-  transition: 0.5s ease;
-  cursor: pointer;
-}
-
-.app__gallery-images_card img {
+.app__gallery-image {
   width: 100%;
   height: 100%;
   object-fit: cover;
   opacity: 1;
+  transition: opacity 0.5s ease;
+}
 
-  transition: 0.5s ease;
+.gallery__image-icon {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #fff;
+  font-size: 2rem;
+  opacity: 0;
+  transition: opacity 0.5s ease;
+  cursor: pointer;
 }
 
 .app__gallery-images_card:hover img {
@@ -89,6 +93,7 @@
   cursor: pointer;
   background-color: var(--color-red);
   border-radius: 5px;
+  transition: color 0.3s ease;
 }
 
 .gallery__arrow-icon:hover {
